--- a/localisation/english/PB_Holland_l_english.yml
+++ b/localisation/english/PB_Holland_l_english.yml
@@ -23,7 +23,7 @@ HOL_Estates_General_desc:0 "WIP"
   talking_blues:0 "§YThe VBD might want to enter into a coalition with us later down the line.§!"
   masters_of_war:0 "§YWith the military on side we will be able to continue our plans for now§!"
   democracys_dawn:0 "§1This tree will be unlocked once the Republicans have been victorious in the dualist battle.§!"
-  court_aristocrats:0 "§RThe Jacobins will be deeply opposed to this action and will become more radical towards the current government.§!"
+  court_aristocrats:0 "§RThe Socialists will be deeply opposed to this action and will become more radical towards the current government.§!"
   expand_estates_general:0 "§5This will expand the amount of seats from 150 to 200 in the Estates-General.§!"
 
   ##########################
@@ -316,6 +316,28 @@ HOL_mobolise_national_church:0 "Mobilise the State Church"
 HOL_mobolise_national_church_desc:0 "WIP"
 HOL_arm_the_paupers:0 "Aims for the Paupers"
 HOL_arm_the_paupers_desc:0 "WIP"
+HOL_faithful_movement:0 "A Movement For the Faithful"
+HOL_faithful_movement_desc:0 "WIP"
+HOL_cooperate_with_secular_parties:0 "Cooperate With Secular Parties"
+HOL_cooperate_with_secular_parties_desc:0 "WIP"
+HOL_christian_communalism:0 "Promote Christian Communalism"
+HOL_christian_communalism_desc:0 "WIP"
+HOL_fifth_collum:0 "The Fifth Collumn"
+HOL_fifth_collum_desc:0 "WIP"
+HOL_future_children:0 "Our Children's Future"
+HOL_future_children_desc:0 "WIP"
+HOL_radical_rationality:0 "Radical But Traditional"
+HOL_radical_rationality_desc:0 "WIP"
+HOL_nature_duty:0 "Our Duty to Mother Nature"
+HOL_nature_duty_desc:0 "WIP"
+HOL_past_sins:0 "The Sins of the Past"
+HOL_past_sins_desc:0 "WIP"
+HOL_abolish_nobles:0 "Abolish Noble Privileges"
+HOL_abolish_nobles_desc:0 "WIP"
+HOL_provinical_assembly:0 "Found the Provinical Assembly"
+HOL_provinical_assembly_desc:0 "WIP"
+HOL_good_commonwealth:0 "A Commonwealth of Good"
+HOL_good_commonwealth_desc:0 "WIP"
 #economic tree
 HOL_economic_recovery:0 "The Directorate for Economic Recovery"
 HOL_economic_recovery_desc:0 "WIP"
