--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -4399,6 +4399,10 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   HOL_UNITED_DEF:0 "The United Republic of the Netherlands"
   HOL_UNITED_ADJ:0 "Dutch"
 
+  HOL_COMMONWEALTH:0 "Commonwealth of the Netherlands"
+  HOL_COMMONWEALTH_DEF:0 "The Commonwealth of the Netherlands"
+  HOL_COMMONWEALTH_ADJ:0 "Dutch"
+
   FIN_Uprising_Jacobin_ni:0 "Forces for Greater Finland"
   FIN_Uprising_Jacobin_ni_DEF:0 "The Forces for Greater Finland"
   FIN_Uprising_Jacobin_ds:0 "Finnish Military Alliance"
