Small Prussia push

--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -231,6 +231,8 @@
   PRS_Political_Maneuvers_In_Danzig_desc:0 "By extracting concessions by certain amicable office holders we might be able to secure the state from certain, unwanted elements."
   PRS_Political_Maneuvers_In_Posen:0 "Political Maneuvers In Posen"
   PRS_Political_Maneuvers_In_Posen_desc:0 "By extracting concessions by certain amicable office holders we might be able to secure the state from certain, unwanted elements."
+  PRS_Political_Maneuvers_In_Memel:0 "Political Maneuvers In Memel"
+  PRS_Political_Maneuvers_In_Memel_desc:0 "By extracting concessions by certain amicable office holders we might be able to secure the state from certain, unwanted elements."
 
   PB_PRS_International:0 "The International"
   PB_PRS_International_desc:0 "\n\n\n\n\n\nThe §HInternational§! has been the brainchild of Philipp Bouhler since his coming to power. The International was designed as a front against what Bouhler refers to as the "§RJudeo Liberal World Order§!". While the organisation is still in its early years the International, for all intents and purposes, is to be kept hidden by all governmental and non-governmental bodies. Effectively the International is a §gtightly monitored global council§! known only by a few minds across the globe. The International operates in the shadows and can be best defined as a shadow government operating primarily in Prussia. The purpose of the International is first; the §Reradication of all leftist thought and influence§!, and second; the establishment of a §L‘Universal Empire’§!. The second goal of the International is an even greater well-kept secret than the organisation itself and has yet to be revealed to the remainder of the council by Bouhler. The Universal Empire is an imagined, empire, that will in the words of Bouhler “§gUnite the disparate tribes of the globe under one single universal banner, with one single purpose, under a single people.§!” This fact is to remain indefinitely secret until Bouhler decides the time is right, should the reality of the International be somehow compromised then this very organisation will likely cease to function.\n\nIf we are to achieve the ambitions of the International then we must spread the influence of the council across the globe, invest in certain continents through the respective decisions below and should the presence of the council reach a certain threshold new opportunities may prevent themselves.\n\n\n                                              \n\n\n\n\nClick on each individual council member to access decisions based on the continent under their jurisdiction.\n"
@@ -420,7 +422,7 @@
 
   PB_PRS_March_To_St_Petersburg:0 "March To St.Petersburg"
 
-  PB_PRS_Puppet_King:0 "Puppet King"
+  PB_PRS_Puppet_King:0 "Friedrich Heinrich Albrecht: Puppet King"
 
   ##########################
   # Ministers/Generals/Tech Teams
