Gaylord Added (REAL)

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -242,6 +242,10 @@
  VICTORY_POINTS_9221:0 "Tartu"
  VICTORY_POINTS_9340:0 "Riga"
  VICTORY_POINTS_310:0 "Daugavpils"
+ VICTORY_POINTS_1734:0 "Duluth"
+ VICTORY_POINTS_4029:0 "Eau Claire"
+ VICTORY_POINTS_4166:0 "La Baie des Puants"
+ VICTORY_POINTS_12456:0 "Doty"
  VICTORY_POINTS_6296:0 "Kaunas"
  VICTORY_POINTS_9483:1 "Siauliai"
  VICTORY_POINTS_6103:0 "London"
@@ -252,6 +256,9 @@
  VICTORY_POINTS_3379:0 "Belfast"
  VICTORY_POINTS_6384:0 "Liverpool"
  VICTORY_POINTS_9379:0 "Leeds"
+ VICTORY_POINTS_10254:0 "Nassau"
+ VICTORY_POINTS_870:0 "Miamis"
+ VICTORY_POINTS_11635:0 "Evansville"
  VICTORY_POINTS_9392:0 "Edinburgh"
  VICTORY_POINTS_11293:0 "Dublin"
  VICTORY_POINTS_7394:0 "Cork"
@@ -1174,7 +1181,14 @@
  VICTORY_POINTS_4437:0 "Louisville"
  VICTORY_POINTS_689:0 "Wyandot"
  VICTORY_POINTS_5205:0 "Sault Sainte-Marie"
- VICTORY_POINTS_6782:0 "Campau"
+ VICTORY_POINTS_11685:0 "Campau"
+ VICTORY_POINTS_11714:0 "Muskegon"
+ VICTORY_POINTS_11669:0 "Saginaw"
+ VICTORY_POINTS_10233:0 "Gaylord"
+ VICTORY_POINTS_7366:0 "Grand Sudbury"
+ VICTORY_POINTS_7899:0 "Baie du Tonnerre"
+ VICTORY_POINTS_6510:0 "Champlain"
+ VICTORY_POINTS_4784:0 "Timmins"
  VICTORY_POINTS_6769:0 "Silex"
  VICTORY_POINTS_3763:0 "Claremont-Hamilton"
  VICTORY_POINTS_749:0 "Niagara"
