--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1189,6 +1189,7 @@
  VICTORY_POINTS_7899:0 "Baie du Tonnerre"
  VICTORY_POINTS_6510:0 "Champlain"
  VICTORY_POINTS_4784:0 "Timmins"
+ VICTORY_POINTS_10753:0 "Tupelo"
  VICTORY_POINTS_6769:0 "Silex"
  VICTORY_POINTS_3763:0 "Claremont-Hamilton"
  VICTORY_POINTS_749:0 "Niagara"
