--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -1476,6 +1476,10 @@ Unicom.45.a:0 "Ford is the best choice"
 Unicom.45.b:0 "Union Standard is for us"
 Unicom.45.c:0 "The EIEC is a solid option"
 
+Unicom.46.t:0 "Tupelo-Gainsville Tornado"
+Unicom.46.d:0 "A devasting Tornado shook the South, with storms hitting the large towns of Tupelo, Gainsville, Oxford and several others.\n\nIt is currently estimated that over 500 people have died with the most effected area being Tupelo. The city has suffered immense damage and entire families have vanished, just like Presley's with their one year-old child Elvis. Even in this moment many more tragedies are discovered.\n\nThis is the deadlist Tornado in the history of the United Commenwealth since the one of 1925 which hit Stirling and killed 695 people.\n\nThe Prime Minister is expected to travel to the affected regions to see the damage firsthand and meet with the locals."
+Unicom.46.a:0 "Mother Nature is Cruel"
+
 Unicom_Elections.1.t:0 "The Dust Settles on the Crisis"
 Unicom_Elections.1.d:0 "Many politicians and citizens believe that Coolidge did not do enough to address the concerns of the veterans and that his lack of action led to the violent removal of the veterans from their encampment in Philadelphia. by the military. Some have even called for his resignation over the matter.\n\nCoolidge has defended his actions, stating that he had to uphold the law and maintain order in the city. However, the controversy surrounding his response to the crisis has only grown, and many are calling for further investigation and accountability. The Bonus Army Crisis remains a stain on the Coolidge administration, and protests and unrest continue even after the end of the general crisis itself."
 Unicom_Elections.1.a:0 "We prevented a revolution and THIS is the thanks we get?"
