Fixed some Indian States

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -421,8 +421,8 @@
  STATE_420:0 "Gilan"
  STATE_421:0 "Kurdistan"
  STATE_422:0 "Ceylon"
- STATE_423:0 "Madurai"
- STATE_424:0 "Madras"
+ STATE_423:0 "Madras"
+ STATE_424:0 "Uttarandhra"
  STATE_425:0 "Mysore"
  STATE_426:0 "Orissa"
  STATE_427:0 "Hyderabad"
@@ -846,9 +846,9 @@
  STATE_845:0 "Diu"
  STATE_846:0 "Goa"
  STATE_847:0 "Karnataka"
- STATE_848:0 "Pulicat"
+ STATE_848:0 "Chennai"
  STATE_849:0 "Travancore"
- STATE_850:0 "Madras"
+ STATE_850:0 "Andhra"
  STATE_851:0 "West Bengal"
  STATE_852:0 "Sanghli"
  STATE_853:0 "Sikkim"
