--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -170,6 +170,8 @@
  VICTORY_POINTS_9893:0 "Gaziantep"
  VICTORY_POINTS_9932:0 "Trabzon"
  VICTORY_POINTS_3938:0 "Madrid"
+ VICTORY_POINTS_1409:0 "Madurai"
+ VICTORY_POINTS_8067:0 "Selam"
  VICTORY_POINTS_9764:0 "Barcelona"
  VICTORY_POINTS_9845:0 "Maó"
  VICTORY_POINTS_9793:0 "Palma"
@@ -312,6 +314,7 @@
  VICTORY_POINTS_8098:0 "Kalat"
  VICTORY_POINTS_8007:0 "Multan"
  VICTORY_POINTS_1321:0 "Thiruvananthapuram"
+ VICTORY_POINTS_1238:0 "Kochi"
  VICTORY_POINTS_10152:0 "Nellore"
  VICTORY_POINTS_285:0 "Wexford"
  VICTORY_POINTS_303:0 "Athlone"
@@ -542,7 +545,7 @@
  VICTORY_POINTS_5022:0 "Waterloo"
  VICTORY_POINTS_1998:0 "San Sansa"
  VICTORY_POINTS_5001:0 "Texarkana"
- VICTORY_POINTS_10278:0 "Madras"
+ VICTORY_POINTS_10278:0 "Chennai"
  VICTORY_POINTS_4987:0 "Kathmandu"
  VICTORY_POINTS_8010:0 "Punakha"
  VICTORY_POINTS_2097:0 "Baghdad"
