--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -84,6 +84,11 @@
   PB_RUS_Sergei_Trufanov:0 "Sergei Trufanov"
   PB_RUS_Anastas_Mikoyan:0 "Anastas Mikoyan"
 
+  RUS_Georgy_Lvov_FM:0 "Georgy Lvov"
+  RUS_Dmitry_Odinets_FM:0 "Dmitry Odinets"
+  RUS_Maxim_Litvinov_FM:0 "Maxim Litvinov"
+  RUS_Andrey_Vyshinsky_FM:0 "Andrey Vyshinsky"
+
   PB_Moscow_Circle_Manchurian_Faction:0 "Manchurian Clique"
   PB_Moscow_Circle_Baltic_Faction:0 "Baltic Clique"
   PB_Okhrana_Connections:0 "Okhrana Connections"
@@ -91,6 +96,8 @@
   PB_Cosmist:0 "Cosmist"
   PB_Solidarist:0 "Solidarist"
   PB_Individualist:0 "Individualist"
+  PB_Nobility_Ties:0 "Noble Ties"
+  PB_Disarmament_Proponent:0 "Disarmament Proponent"
   
   ##########################
   # IDEAS
@@ -256,13 +263,21 @@
   PB_RUS_Begin_St_Petersburg_desc:0 "The time has come. The debates are over, the gears of bureacracy have turned and our ministers have spoken. The groundwork for our nation's upcoming elections has been laid, all that remains is to announce them. The Prime Minister and the Tsar will make for St. Petersburg with all haste, to speak before out nation. The future of the Empire will be decided over the next few weeks. May God help us."
 
   PB_RUS_Second_Time_of_Troubles:0 "Mother Russia Bleeds"
+  PB_RUS_Second_Time_of_Troubles_desc:0 "Today is one of the darkest days in Russian history. Terrorists struck our great nation at its core and its peripheries. We must recover and strike back at those who would dare to defile Holy Mother Russia."
   PB_RUS_Blame_Okhrana:0 "Blame the Okhrana"
+  PB_RUS_Blame_Okhrana_desc:0 "The Okhrana had ONE job and they failed at it. It is obviously their fault that the attacks occured as if they had been on guard as they are supposed to be, the attacks wouldn't have happened."
   PB_RUS_Blame_Poles:0 "Blame the Poles"
+  PB_RUS_Blame_Poles_desc:0 "Ah, those pesky, pesky Poles. It is obviously their fault for the attacks, as they have long been a thorn in the side of the Motherland for so long. We should move to punish them and remind them of their place in the empire."
   PB_RUS_Overhaul_Intelligence:0 "Overhaul the Intelligence Apparatus"
+  PB_RUS_Overhaul_Intelligence_desc:0 "If the Okhrana cannot do their one job for the Motherland, then what good are they in their current state? It is time we revamped the Russian Intelligence apparatus so such major failings do not happen again."
   PB_RUS_Recall_Drozdovsky:0 "Recall Drozdovsky"
+  PB_RUS_Recall_Drozdovsky_desc:0 "Mikhail Drozdovsky was sent to Galicia to be an advisor to the local government in their war against the terrorists. However, now that the Duma is debating the fate of the Galician government, we should take the opportunity to recall him back to Saint Petersburg to await further orders."
   PB_RUS_Abolish_Galician_Duma:0 "Abolish the Galician Duma"
+  PB_RUS_Abolish_Galician_Duma_desc:0 "The rubberstamp Duma in Galicia is obviously not worth the time to prop up. It is obviously filled with dissenters and traitors to Russia. We should abolish the useless stamp and enforce direct control in Galicia."
   PB_RUS_Operation_Azalea:0 "Operation Azalea"
+  PB_RUS_Operation_Azalea_desc:0 "The Galician Duma is filled with dissentors and traitors. Abolishing the Duma is one thing, but it allows such filth to escape justice. We cannot allow that. The Russian Military shall stage a coup in Galicia and storm the Duma there and arrest everybody in the building."
   PB_RUS_End_German_Relations:0 "Ban the German Embassy"
+  PB_RUS_End_German_Relations_desc:0 "It has been revealed that the perfidious Germans have been supporting the Polish terrorists. This is no surprise, but after the terrorist attacks in Saint Petersburg, enough is enough. It is time to give the Germans the boot and ban their embassy."
   PB_RUS_Proceed_with_Elections:0 "Proceed with the Elections"
   PB_RUS_Suspend_Elections:0 "Suspend the Elections"
 
@@ -368,6 +383,23 @@
   PB_RUS_Perfect_Democracy:0 "In Search of a Perfect Democracy"
   PB_RUS_Slavic_Union:0 "The Brotherhood of the East"
   PB_RUS_Revolutionary_Empire:0 "The Evolution of Revolution"
+
+  PB_RUS_Not_So_Invisible:0 "The Not-So-Invisible Hand"
+  PB_RUS_Civilian_Branch:0 "A Party for the Nation"
+  PB_RUS_Manchu_Clique:0 "Return from Oriental Exile"
+  PB_RUS_Baltic_Clique:0 "The Firmest Hand Prevails"
+  PB_RUS_National_Mobilization:0 "Mobilization Order No.227"
+  PB_RUS_Stack_Duma:0 "Stack the Duma"
+  PB_RUS_New_Tsar:0 "Reshuffle the Winter Palace"
+  PB_RUS_Intensify_Russification:0 "Intensify Russification"
+  PB_RUS_Abolish_Pale:0 "Abolish the Pale of Settlement"
+  PB_RUS_Redemption_Brigades:0 "Redemption Brigades"
+  PB_RUS_Russian_Renaissance:0 "Russian Cultural Renaissance"
+  PB_RUS_Mobilize_Youth:0 "Deputize the Hundredist Youth Corps"
+  PB_RUS_Bannerkeeper_of_Slavs:0 "Bannerkeeper of the Slavs"
+  PB_RUS_Guide_the_Chinese:0 "A Natural Border in the East"
+  PB_RUS_National_Panopticon:0 "The National Panopticon"
+  PB_RUS_National_Panopticon_desc:0 "The Commonality Consensus, as proposed by Zofia Tesla, would be an abberation if implemented as originally designed. A system in which any person, regardless of determining factors, can cast their vote in an unregulated democratic system would be anarchy at best.\n\nStill, there is potential in her proposal, and with some adjustments this system might be the solution to Russia's eternal social unrest. With a system of implants and monitors, we could use the network to regularly scan citizen's thought patterns for anti-state beliefs, which could then be corrected with a broadcasted counter-pattern. A minimally invasive model would allow us to, with relatively little effort, rapidly condition the population to be more passive and supportive of the regime, eventually §Rwithout them even realizing it.§!"
 
   ########################## 
   # Decisions
