--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -34,6 +34,12 @@
   PRS_AN_2:0 "Partei des freien Marktes"
 
   ##########################
+  # LAWS
+  ##########################
+
+  one_gun_two_men:0 "One Gun, Two Men"
+
+  ##########################
   # TRAITS
   ##########################
 
@@ -123,6 +129,7 @@
   PB_PRS_Appeal_To_The_German_Diaspora_tt:0 "\nThe above on-map decisions grant §G+2§! building slots in their respective state and §G+2.5%§! stability when completed."
   PB_PRS_Demand_Authority_Over_Berlin_tt:0 "\nWhen the §HBerlin Administration§! is annexed, you will gain the following temporary debuff for §Y200§! days:\n\n"
   PB_PRS_The_Last_Of_The_Nobility_tt:0 "\nIt is recommended you §YPrioritize§! completing this focus branch."
+  PB_PRS_David_And_Goliath_tt:0 "Unlocks a unqiue Conscription law:\n"
 
   ##########################
   # MECHANICS
