China OOBs and Such

--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -4436,3 +4436,78 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   RUS_GREATER_ds_ADJ:0 "Russian"
   RUS_GREATER_cn_ADJ:0 "Russian"
   RUS_GREATER_an_ADJ:0 "Russian"
+
+  GAN_MONGOLIA_ni:0 "Mongolian Provisional Government"
+  GAN_MONGOLIA_ni_DEF:0 "The Mongolian Provisional Government"
+  GAN_MONGOLIA_ds:0 "Mongolian Provisional Government"
+  GAN_MONGOLIA_ds_DEF:0 "The Mongolian Provisional Government"
+  GAN_MONGOLIA_rc:0 "Mongolian Provisional Government"
+  GAN_MONGOLIA_rc_DEF:0 "The Mongolian Provisional Government"
+  GAN_MONGOLIA_an:0 "Mongolian Provisional Government"
+  GAN_MONGOLIA_an_DEF:0 "The Mongolian Provisional Government"
+  GAN_MONGOLIA_cn:0 "Mongolian Provisional Government"
+  GAN_MONGOLIA_cn_DEF:0 "The Mongolian Provisional Government"
+  GAN_MONGOLIA_lb:0 "Mongolian Provisional Government"
+  GAN_MONGOLIA_lb_DEF:0 "The Mongolian Provisional Government"
+  GAN_MONGOLIA_ss:0 "Mongolian Provisional Government"
+  GAN_MONGOLIA_ss_DEF:0 "The Mongolian Provisional Government"
+  GAN_MONGOLIA_jc:0 "Revolutionary Mongolian Congress"
+  GAN_MONGOLIA_jc_DEF:0 "The Revolutionary Mongolian Congress"
+  GAN_MONGOLIA_ni_ADJ:0 "Mongolian"
+  GAN_MONGOLIA_rc_ADJ:0 "Mongolian"
+  GAN_MONGOLIA_lb_ADJ:0 "Mongolian"
+  GAN_MONGOLIA_ss_ADJ:0 "Mongolian"
+  GAN_MONGOLIA_jc_ADJ:0 "Mongolian"
+  GAN_MONGOLIA_ds_ADJ:0 "Mongolian"
+  GAN_MONGOLIA_cn_ADJ:0 "Mongolian"
+  GAN_MONGOLIA_an_ADJ:0 "Mongolian"
+
+  SIK_XINJIANG_ni:0 "Xinjiang Province"
+  SIK_XINJIANG_ni_DEF:0 "The Xinjiang Province"
+  SIK_XINJIANG_ds:0 "Xinjiang Province"
+  SIK_XINJIANG_ds_DEF:0 "The Xinjiang Province"
+  SIK_XINJIANG_rc:0 "Xinjiang Province"
+  SIK_XINJIANG_rc_DEF:0 "The Xinjiang Province"
+  SIK_XINJIANG_an:0 "Xinjiang Province"
+  SIK_XINJIANG_an_DEF:0 "The Xinjiang Province"
+  SIK_XINJIANG_cn:0 "Xinjiang Province"
+  SIK_XINJIANG_cn_DEF:0 "The Xinjiang Province"
+  SIK_XINJIANG_lb:0 "Xinjiang Province"
+  SIK_XINJIANG_lb_DEF:0 "The Xinjiang Province"
+  SIK_XINJIANG_ss:0 "Xinjiang Province"
+  SIK_XINJIANG_ss_DEF:0 "The Xinjiang Province"
+  SIK_XINJIANG_jc:0 "Xinjiang Province"
+  SIK_XINJIANG_jc_DEF:0 "The Xinjiang Province"
+  SIK_XINJIANG_ni_ADJ:0 "Uyghur"
+  SIK_XINJIANG_rc_ADJ:0 "Uyghur"
+  SIK_XINJIANG_lb_ADJ:0 "Uyghur"
+  SIK_XINJIANG_ss_ADJ:0 "Uyghur"
+  SIK_XINJIANG_jc_ADJ:0 "Uyghur"
+  SIK_XINJIANG_ds_ADJ:0 "Uyghur"
+  SIK_XINJIANG_cn_ADJ:0 "Uyghur"
+  SIK_XINJIANG_an_ADJ:0 "Uyghur"
+
+  ETR_XINJIANG_ni:0 "Uyghur Islamic Republic"
+  ETR_XINJIANG_ni_DEF:0 "The Uyghur Islamic Republic"
+  ETR_XINJIANG_ds:0 "Uyghur Islamic Republic"
+  ETR_XINJIANG_ds_DEF:0 "The Uyghur Islamic Republic"
+  ETR_XINJIANG_rc:0 "Uyghur Islamic Republic"
+  ETR_XINJIANG_rc_DEF:0 "The Uyghur Islamic Republic"
+  ETR_XINJIANG_an:0 "Uyghur Islamic Republic"
+  ETR_XINJIANG_an_DEF:0 "The Uyghur Islamic Republic"
+  ETR_XINJIANG_cn:0 "Uyghur Islamic Republic"
+  ETR_XINJIANG_cn_DEF:0 "The Uyghur Islamic Republic"
+  ETR_XINJIANG_lb:0 "Uyghur Islamic Republic"
+  ETR_XINJIANG_lb_DEF:0 "The Uyghur Islamic Republic"
+  ETR_XINJIANG_ss:0 "Uyghur Islamic Republic"
+  ETR_XINJIANG_ss_DEF:0 "The Uyghur Islamic Republic"
+  ETR_XINJIANG_jc:0 "Uyghur Islamic Republic"
+  ETR_XINJIANG_jc_DEF:0 "The Uyghur Islamic Republic"
+  ETR_XINJIANG_ni_ADJ:0 "Uyghur"
+  ETR_XINJIANG_rc_ADJ:0 "Uyghur"
+  ETR_XINJIANG_lb_ADJ:0 "Uyghur"
+  ETR_XINJIANG_ss_ADJ:0 "Uyghur"
+  ETR_XINJIANG_jc_ADJ:0 "Uyghur"
+  ETR_XINJIANG_ds_ADJ:0 "Uyghur"
+  ETR_XINJIANG_cn_ADJ:0 "Uyghur"
+  ETR_XINJIANG_an_ADJ:0 "Uyghur"
