--- a/localisation/english/PB_war_l_english.yml
+++ b/localisation/english/PB_war_l_english.yml
@@ -79,3 +79,17 @@ WAR_NAME_FIN_KOR:0 "The 2nd Finno-Korean Hyperwar"
 
 WAR_NAME_AME_ENG:0 "The Imperial Civil War"
 WAR_NAME_ENG_AME:0 "The Imperial Civil War"
+
+WAR_NAME_MON_GAN:0 "The Mongolian War of Independence"
+WAR_NAME_GAN_MON:0 "The Mongolian War of Independence"
+
+WAR_NAME_MAN_GAN:0 "The Mongolian War of Independence"
+WAR_NAME_GAN_MAN:0 "The Mongolian War of Independence"
+
+WAR_NAME_SIK_ETR:0 "The War in Xinjiang"
+WAR_NAME_ETR_SIK:0 "The War in Xinjiang"
+
+WAR_NAME_SIK_XSM:0 "The Western Plains War"
+WAR_NAME_XSM_SIK:0 "The Western Plains War"
+WAR_NAME_SIK_KUM:0 "The Western Plains War"
+WAR_NAME_KUM_SIK:0 "The Western Plains War"
