the superiority complex of the kroket: a philosophical study

--- a/localisation/english/PB_Holland_l_english.yml
+++ b/localisation/english/PB_Holland_l_english.yml
@@ -65,6 +65,14 @@ PB_HOL_underhanded_tactics:0 "Underhanded Tactics"
   # EVENTS
   ##########################
 
+#automation crisis
+holland.auto.1.t:0 "The Automation Crisis Strikes"
+holland.auto.1.d:0 "WIP"
+holland.auto.1.a:0 "Why in this trying time?"
+holland.auto.2.t:0 "Initial Automation Crisis Recovery"
+holland.auto.2.d:0 "WIP"
+holland.auto.2.a:0 "Glad we could please some people!"
+
 #starting tree
 holland.0.t:0 "The Democracy Debate"
 holland.0.d:0 "The debate is upon us. Politicians and citizens shiver at the thought of its results. It will decide so much, yet seem so insignificant at the same time. At least that depends on who comes out on top.\n\nLet us enter the Estates-General and see what the future will bring to this nation and what it will mean for our dreams, values and liberties. The country is split between two clear sides with no clear majority. We have had great struggles and significant decisions before, but this time there is no Stadholder to hold our hands, no Prussian King to protect us, a British navy to defend our coastline and importantly no Thorbecke to get us through hard times or to make our decisive decisions for us.\n\nLet the debate begin."
@@ -187,6 +195,7 @@ holland.26.a:0 "A loss to our empire!"
 holland.27.t:0 "The Exile Government"
 holland.27.d:0 "WIP"
 holland.27.a:0 "Changes must happen!"
+
 
 
   ##########################
