Mongolia and Xinjiang stuff

--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -1097,6 +1097,26 @@
   PBNews.276.d:0 "Chaos in the streets of St. Petersburg as forces of the Imperial Russian Army stormed the Duma and Winter Palace, taking both with relative ease. Landships and Automats patrol the streets of Russia's major Western cities, quickly putting down civilian resistance and routing Loyalist elements.\n\nThe coup plotters, including General Anton Denikin and aristocrat Felix Yusupov, appeared on Russian kinegrams to announce the formation of the "State Committee on the State of Emergency"."
   PBNews.276.a:0 "Alexander turns in his grave."
 
+  PBNews.277.t:0 "MONGOL REBELS SURRENDER"
+  PBNews.277.d:0 "Following a serious of strategic defeats, the insurrection in Southern Mongolia has collapsed. The so-called Army of Perpetual Resistance was routed by Principality loyalists, the remnants of the resistance fleeing into nearby Revolutionary China.\n\nWith the rebels defeated, Prince Demchugdongrub now looks to consolidate his rule over the Manchurian-aligned Mongolian state. The victory has been celebrated as a major success for Zheltorossiya's pseudo-independent foreign policy."
+  PBNews.277.a:0 "Russian control of China calcifies further."
+
+  PBNews.278.t:0 "MONGOL REBELS VICTORIOUS"
+  PBNews.278.d:0 "In a shocking reversal of fortunes, the Mongolian rebellion marched into Ulaanbaatar this morning and toppled the collaborator government of Prince Demchugdongrub. Proclaiming a provisional government, the rebels are still in heated debate about which model of governance to adopt.\n\nWhile it seems likely that a Russian intervention is coming, for now, Mongolia celebrates true independence. The principal question of the moment is determining a system of government, though the largest faction remains aligned with the ideals of Beijing China and supports a republican government."
+  PBNews.278.a:0 "The Zheltorossiyan experiment begins to crack"
+
+  PBNews.279.t:0 "TUNGAN FORCES SURRENDER"
+  PBNews.279.d:0 "Russian forces in Xinjiang celebrated a major victory today with the toppling of the Tungan government. Ma Hushan, head of the Tungan rebels, fled to the West and left his forces ultimately leaderless in the wake of Russian advances.\n\nWith Xinjiang firmly under Russian control, the Intervention has now transitioned into rebuilding the region and beginning integration with Zheltorossiya. Though Tungan irregular forces continue to harass the Russian forces, for now Russia's military operation has proven successful."
+  PBNews.279.a:0 "A heavy blow to the Islamists"
+
+  PBNews.280.t:0 "XINJIANG FORCES RETREAT"
+  PBNews.280.d:0 "Ma Hushan proclaimed to a gathered crowd in Urumqi that the Russians had been completely routed from Xinjiang. In the same speech, he proclaimed the creation of an Islamic Republic and affirmed his allegiance to warlord Ma Zhongying.\n\nThe defeat in Xinjiang is a massive blow to Russia and Zheltorossiya, both of which had devoted significant resources to keep the Islamist forces contained. Now, Zhongying's favored warlord borders Central Asia, a nightmare scenario for Russian administrators."
+  PBNews.280.a:0 "Surely he isn't serious?"
+  
+  PBNews.281.t:0 "MA ZHONGYING EXECUTED"
+  PBNews.281.d:0 "Ma Zhongying, the once feared warlord of West China, is dead.\n\nAfter launching an invasion of the now Russian-occupied Xinjiang, Zhongying's forces were pushed back and ultimately crushed. Zhongying himself died in a firefight with Russian agents, who paraded his body around the former capital for photographers.\n\nNow occupying much of Western China, the Russian occupation declared the United Western Provinces, a reconstruction authority to govern the war-torn remnants of Zhongying's failed empire."
+  PBNews.281.a:0 "Not a huge loss."
+
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
