--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -4487,6 +4487,31 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   SIK_XINJIANG_cn_ADJ:0 "Uyghur"
   SIK_XINJIANG_an_ADJ:0 "Uyghur"
 
+  SIK_WESTCHINA_ni:0 "United Western Provinces"
+  SIK_WESTCHINA_ni_DEF:0 "The United Western Provinces"
+  SIK_WESTCHINA_ds:0 "United Western Provinces"
+  SIK_WESTCHINA_ds_DEF:0 "The United Western Provinces"
+  SIK_WESTCHINA_rc:0 "United Western Provinces"
+  SIK_WESTCHINA_rc_DEF:0 "The United Western Provinces"
+  SIK_WESTCHINA_an:0 "United Western Provinces"
+  SIK_WESTCHINA_an_DEF:0 "The United Western Provinces"
+  SIK_WESTCHINA_cn:0 "United Western Provinces"
+  SIK_WESTCHINA_cn_DEF:0 "The United Western Provinces"
+  SIK_WESTCHINA_lb:0 "United Western Provinces"
+  SIK_WESTCHINA_lb_DEF:0 "The United Western Provinces"
+  SIK_WESTCHINA_ss:0 "United Western Provinces"
+  SIK_WESTCHINA_ss_DEF:0 "The United Western Provinces"
+  SIK_WESTCHINA_jc:0 "United Western Provinces"
+  SIK_WESTCHINA_jc_DEF:0 "The United Western Provinces"
+  SIK_WESTCHINA_ni_ADJ:0 "Uyghur"
+  SIK_WESTCHINA_rc_ADJ:0 "Uyghur"
+  SIK_WESTCHINA_lb_ADJ:0 "Uyghur"
+  SIK_WESTCHINA_ss_ADJ:0 "Uyghur"
+  SIK_WESTCHINA_jc_ADJ:0 "Uyghur"
+  SIK_WESTCHINA_ds_ADJ:0 "Uyghur"
+  SIK_WESTCHINA_cn_ADJ:0 "Uyghur"
+  SIK_WESTCHINA_an_ADJ:0 "Uyghur"
+
   ETR_XINJIANG_ni:0 "Uyghur Islamic Republic"
   ETR_XINJIANG_ni_DEF:0 "The Uyghur Islamic Republic"
   ETR_XINJIANG_ds:0 "Uyghur Islamic Republic"
@@ -4511,3 +4536,28 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   ETR_XINJIANG_ds_ADJ:0 "Uyghur"
   ETR_XINJIANG_cn_ADJ:0 "Uyghur"
   ETR_XINJIANG_an_ADJ:0 "Uyghur"
+
+  XSM_WESTCHINA_ni:0 "Yettishar Caliphate"
+  XSM_WESTCHINA_ni_DEF:0 "The Yettishar Caliphate"
+  XSM_WESTCHINA_ds:0 "Yettishar Caliphate"
+  XSM_WESTCHINA_ds_DEF:0 "The Yettishar Caliphate"
+  XSM_WESTCHINA_rc:0 "Yettishar Caliphate"
+  XSM_WESTCHINA_rc_DEF:0 "The Yettishar Caliphate"
+  XSM_WESTCHINA_an:0 "Yettishar Caliphate"
+  XSM_WESTCHINA_an_DEF:0 "The Yettishar Caliphate"
+  XSM_WESTCHINA_cn:0 "Yettishar Caliphate"
+  XSM_WESTCHINA_cn_DEF:0 "The Yettishar Caliphate"
+  XSM_WESTCHINA_lb:0 "Yettishar Caliphate"
+  XSM_WESTCHINA_lb_DEF:0 "The Yettishar Caliphate"
+  XSM_WESTCHINA_ss:0 "Yettishar Caliphate"
+  XSM_WESTCHINA_ss_DEF:0 "The Yettishar Caliphate"
+  XSM_WESTCHINA_jc:0 "Yettishar Caliphate"
+  XSM_WESTCHINA_jc_DEF:0 "The Yettishar Caliphate"
+  XSM_WESTCHINA_ni_ADJ:0 "Yettishar"
+  XSM_WESTCHINA_rc_ADJ:0 "Yettishar"
+  XSM_WESTCHINA_lb_ADJ:0 "Yettishar"
+  XSM_WESTCHINA_ss_ADJ:0 "Yettishar"
+  XSM_WESTCHINA_jc_ADJ:0 "Yettishar"
+  XSM_WESTCHINA_ds_ADJ:0 "Yettishar"
+  XSM_WESTCHINA_cn_ADJ:0 "Yettishar"
+  XSM_WESTCHINA_an_ADJ:0 "Yettishar"
