--- a/localisation/english/PB_Holland_l_english.yml
+++ b/localisation/english/PB_Holland_l_english.yml
@@ -7,7 +7,7 @@ HOL_Jacob_Kalff:0 "Jacob Adriaan Kalff"
 HOL_Jacob_Kalff_desc:0 "WIP"
 HOL_Estates_General:0 "Estates-General"
 HOL_Estates_General_desc:0 "WIP"
-HOL_Wilhemina:0 "Wilhelmina Helena van Oranje-Nassau"
+#HOL_Wilhemina:0 "Wilhelmina Helena van Oranje-Nassau"
 HOL_Wilhemina_desc:0 "WIP"
 
   ##########################
@@ -59,7 +59,13 @@ PB_HOL_pro_democracy_rallies:0 "Hold Pro-Democracy Rallies"
 PB_HOL_incite_wildcat_strike:0 "Incite a Wildcat Strike"
 PB_HOL_mass_media_campaign:0 "Mass Media Campaign"
 PB_HOL_underhanded_tactics:0 "Underhanded Tactics"
-  
+
+  ##########################
+  # DECISIONS
+  ##########################
+
+HOL_extremist_fight:0 "The Extremist Fight"
+PB_HOL_extremist_coup:0 "Inevitable Extremist Coup"
 
   ##########################
   # EVENTS
@@ -72,7 +78,6 @@ holland.auto.1.a:0 "Why in this trying time?"
 holland.auto.2.t:0 "Initial Automation Crisis Recovery"
 holland.auto.2.d:0 "WIP"
 holland.auto.2.a:0 "Glad we could please some people!"
-
 #starting tree
 holland.0.t:0 "The Democracy Debate"
 holland.0.d:0 "The debate is upon us. Politicians and citizens shiver at the thought of its results. It will decide so much, yet seem so insignificant at the same time. At least that depends on who comes out on top.\n\nLet us enter the Estates-General and see what the future will bring to this nation and what it will mean for our dreams, values and liberties. The country is split between two clear sides with no clear majority. We have had great struggles and significant decisions before, but this time there is no Stadholder to hold our hands, no Prussian King to protect us, a British navy to defend our coastline and importantly no Thorbecke to get us through hard times or to make our decisive decisions for us.\n\nLet the debate begin."
@@ -100,25 +105,6 @@ holland.7.a:0 "The Commission Must Accept!"
 holland.8.t:0 "A United Administration?"
 holland.8.d:0 "WIP"
 holland.8.a:0 "Let the merge begin!"
-#second antwerp conference
-holland.9.t:0 "The Second Antwerp Conference"
-holland.9.d:0 "WIP"
-holland.9.a:0 "Send The Invitations!"
-holland.9a.t:0 "The Second Antwerp Conference"
-holland.9a.d:0 "WIP"
-holland.9a.a:0 "Accept The Invitation!"
-holland.9b.t:0 "The Second Antwerp Conference"
-holland.9b.d:0 "WIP"
-holland.9b.a:0 "Accept The Invitation!"
-holland.9c.t:0 "The Second Antwerp Conference"
-holland.9c.d:0 "WIP"
-holland.9c.a:0 "Accept The Invitation!"
-holland.9d.t:0 "All The Attendees Accepted"
-holland.9d.d:0 "WIP"
-holland.9d.a:0 "Start The Conference!"
-holland.9e.t:0 "Successfull Conference"
-holland.9e.d:0 "WIP"
-holland.9e.a:0 "A testimony to diplomacy!"
 #colonial tree 2
 holland.10.t:0 "The V.O.C's Offer"
 holland.10.d:0 "WIP"
@@ -182,19 +168,26 @@ holland.22.b:0 "Ban the vote from taking place."
 holland.23.t:0 "Amsterdam Town"
 holland.23.d:0 "rioting in amsterdam"
 holland.23.a:0 "Somebody better investigate soon."
-#capitulation
-holland.1c.t:0 "The Loss Of The Mainland"
-holland.1c.d:0 "WIP"
-holland.1c.a:0 "a"
-holland.25.t:0 "Occupation of Dutch Colonies"
+#wilhelmina tree
+holland.25.t:0 "Inauguration of the New State-Pensionary"
 holland.25.d:0 "WIP"
-holland.25.a:0 "It's free real estate."
-holland.26.t:0 "The Colonies Break Away"
-holland.26.d:0 "WIP"
-holland.26.a:0 "A loss to our empire!"
-holland.27.t:0 "The Exile Government"
-holland.27.d:0 "WIP"
-holland.27.a:0 "Changes must happen!"
+holland.25.a:0 "Congratulate her for me!"
+holland.28.t:0 "Jacobins in the Estates-General"
+holland.28.d:0 "WIP"
+holland.28.a:0 "Another order replaced!"
+#capitulation
+holland.1c1.t:0 "The Loss Of The Mainland"
+holland.1c1.d:0 "WIP"
+holland.1c1.a:0 "a"
+holland.1c2.t:0 "Occupation of Dutch Colonies"
+holland.1c2.d:0 "WIP"
+holland.1c2.a:0 "It's free real estate."
+holland.1c3.t:0 "The Colonies Break Away"
+holland.1c3.d:0 "WIP"
+holland.1c3.a:0 "A loss to our empire!"
+holland.1c4.t:0 "The Exile Government"
+holland.1c4.d:0 "WIP"
+holland.1c4.a:0 "Changes must happen!"
 
 
 
@@ -214,7 +207,7 @@ PB_HOL_recent_unification_desc:0 "The recent unification of the Kaapkolonie and 
 PB_HOL_boer_bloc:0 "The Boer Economic Bloc"
 PB_HOL_boer_bloc_desc:0 "WIP"
 PB_HOL_dualistic_system:0 "Dualistic System"
-PB_HOL_dualistic_system_desc:0 "The provinces of the Dutch Republic can be roughly categorised into two types.\n\nThe first are the “regenten” provinces, where representatives to the States General are elected by urban noblemen and merchant families. Holland is the most influential among these and is often the deciding say in who becomes State Pensionary.\n\nSecond are the “free” provinces which have public referendums to elect their representatives, although laws within these provinces may differ in who is enfranchised.\nFor most of the republic’s modern history these have been rural regions without an entrenched merchant or landowning class.\nHowever the shocking admission of Flanders as a free province in 1898 permanently upset the balance of power, and ever since the two provincial blocs have been locking horns, both vying to stymie the other’s power and impose their grand visions for the republic."
+PB_HOL_dualistic_system_desc:0 "The provinces of the Dutch Republic can be roughly categorised into two types.\n\nThe first are the “regenten” provinces, where representatives to the States General are elected by urban noblemen and merchant families. Holland is the most influential among these and is often the deciding say in who becomes State Pensionary.\n\nSecond are the “free” provinces which have public referendums to elect their representatives, although laws within these provinces may differ in who is enfranchised.For most of the republic’s modern history these have been rural regions without an entrenched merchant or landowning class.\n\nHowever the shocking admission of Flanders as a free province in 1898 permanently upset the balance of power, and ever since the two provincial blocs have been locking horns, both vying to stymie the other’s power and impose their grand visions for the republic."
 PB_HOL_colonial_empire:0 "Nederlandse Koloniale Rijk"
 PB_HOL_colonial_empire_desc:0 "The Dutch Colonial Empire has been built piece by piece by the merchants, soldiers and elite of the Dutch Republic. Over the centuries, a large, continental colonial empire has been achieved. Although it suffered losses in the Great War, especially in the East Indian region with the local uprisings, the process of rebuilding and re-consolidating Dutch control has been relatively fast due to the uniquely Dutch way of colonial expansion and administration. Our pearl necklace will continue to shine."
 PB_HOL_greenhouse_of_europe:0 "The Greenhouse of Europe"
@@ -234,9 +227,9 @@ PB_HOL_colosuss_of_sea_2_desc:0 "While the other nations of Europe dedicated the
 PB_ORJ_lesotho_resistance:0 "Sesotho Resistance"
 PB_ORJ_lesotho_resistance_desc:0 "Ever since we settled in this region the Sesotho peoples have resisted our existence and no agreement has ever been able to be established between us and the Sesotho peoples, thus we are in conflict until one of the two sides is defeated or leaves."
 PB_HOL_dualistic_system_2:0 "Dualistic System"
-PB_HOL_dualistic_system_2_desc:0 "The provinces of the Dutch Republic can be roughly categorised into two types.\n\nThe first are the “regenten” provinces, where representatives to the States General are elected by urban noblemen and merchant families. Holland is the most influential among these and is often the deciding say in who becomes State Pensionary.\n\nSecond are the “free” provinces which have public referendums to elect their representatives, although laws within these provinces may differ in who is enfranchised.\nFor most of the republic’s modern history these have been rural regions without an entrenched merchant or landowning class.\nHowever the shocking admission of Flanders as a free province in 1898 permanently upset the balance of power, and ever since the two provincial blocs have been locking horns, both vying to stymie the other’s power and impose their grand visions for the republic."
+PB_HOL_dualistic_system_2_desc:0 "The provinces of the Dutch Republic can be roughly categorised into two types.\n\nThe first are the “regenten” provinces, where representatives to the States General are elected by urban noblemen and merchant families. Holland is the most influential among these and is often the deciding say in who becomes State Pensionary.\n\nSecond are the “free” provinces which have public referendums to elect their representatives, although laws within these provinces may differ in who is enfranchised.For most of the republic’s modern history these have been rural regions without an entrenched merchant or landowning class.\n\nHowever the shocking admission of Flanders as a free province in 1898 permanently upset the balance of power, and ever since the two provincial blocs have been locking horns, both vying to stymie the other’s power and impose their grand visions for the republic."
 PB_HOL_dualistic_system_3:0 "Dualistic System"
-PB_HOL_dualistic_system_3_desc:0 "The provinces of the Dutch Republic can be roughly categorised into two types.\n\nThe first are the “regenten” provinces, where representatives to the States General are elected by urban noblemen and merchant families. Holland is the most influential among these and is often the deciding say in who becomes State Pensionary.\n\nSecond are the “free” provinces which have public referendums to elect their representatives, although laws within these provinces may differ in who is enfranchised.\nFor most of the republic’s modern history these have been rural regions without an entrenched merchant or landowning class.\nHowever the shocking admission of Flanders as a free province in 1898 permanently upset the balance of power, and ever since the two provincial blocs have been locking horns, both vying to stymie the other’s power and impose their grand visions for the republic."
+PB_HOL_dualistic_system_3_desc:0 "The provinces of the Dutch Republic can be roughly categorised into two types.\n\nThe first are the “regenten” provinces, where representatives to the States General are elected by urban noblemen and merchant families. Holland is the most influential among these and is often the deciding say in who becomes State Pensionary.\n\nSecond are the “free” provinces which have public referendums to elect their representatives, although laws within these provinces may differ in who is enfranchised.For most of the republic’s modern history these have been rural regions without an entrenched merchant or landowning class.\n\nHowever the shocking admission of Flanders as a free province in 1898 permanently upset the balance of power, and ever since the two provincial blocs have been locking horns, both vying to stymie the other’s power and impose their grand visions for the republic."
 
   ##########################
   # FOCUSES
