--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -425,6 +425,11 @@
  VICTORY_POINTS_1162:0 "Heyuan"
  VICTORY_POINTS_9938:0 "Shantou"
  VICTORY_POINTS_9970:0 "Shaoguan"
+ VICTORY_POINTS_7095:0 "Liuzhou"
+ VICTORY_POINTS_10459:0 "Bose"
+ VICTORY_POINTS_4134:0 "Hechi"
+ VICTORY_POINTS_1010:0 "Zunyi"
+ VICTORY_POINTS_2067:0 "Liangshan"
  VICTORY_POINTS_7191:0 "Hangzhou"
  VICTORY_POINTS_7222:0 "Hefei"
  VICTORY_POINTS_9958:0 "Zhengzhou"
@@ -751,7 +756,12 @@
  VICTORY_POINTS_1316:0 "Pontianak"
  VICTORY_POINTS_4279:0 "Singkawang"
  VICTORY_POINTS_1373:0 "Djambi"
- VICTORY_POINTS_1319:0 "Kunming"
+ VICTORY_POINTS_7446:0 "Kunming"
+ VICTORY_POINTS_10346:0 "Yuxi"
+ VICTORY_POINTS_12898:0 "Baoshan"
+ VICTORY_POINTS_5072:0 "Zhaotong"
+ VICTORY_POINTS_10413:0 "Xishuangbanna"
+ VICTORY_POINTS_4501:0 "Mengzi"
  VICTORY_POINTS_8049:0 "Yan'an"
  VICTORY_POINTS_1519:0 "Taiyuan"
  VICTORY_POINTS_377:0 "Cardiff"
