AME and China Love

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -403,6 +403,7 @@
  VICTORY_POINTS_7014:0 "Shanghai"
  VICTORY_POINTS_9843:0 "Beijing"
  VICTORY_POINTS_1047:0 "Guangzhou"
+ VICTORY_POINTS_10335:0 "Huaihua"
  VICTORY_POINTS_1069:0 "Jinan"
  VICTORY_POINTS_3992:0 "Nanchang"
  VICTORY_POINTS_4196:0 "Fuzhou"
@@ -411,6 +412,25 @@
  VICTORY_POINTS_4925:0 "Chengdu"
  VICTORY_POINTS_7071:0 "Xiamen"
  VICTORY_POINTS_7097:0 "Changsha"
+ VICTORY_POINTS_12350:0 "Hengyang"
+ VICTORY_POINTS_9999:0 "Yueyang"
+ VICTORY_POINTS_10377:0 "Shaoyang"
+ VICTORY_POINTS_1628:0 "Jiujiang"
+ VICTORY_POINTS_4183:0 "Ganzhou"
+ VICTORY_POINTS_7054:0 "Shangrao"
+ VICTORY_POINTS_10057:0 "Jian"
+ VICTORY_POINTS_9984:0 "Linchuan"
+ VICTORY_POINTS_7141:0 "Meizhou"
+ VICTORY_POINTS_7027:0 "Putian"
+ VICTORY_POINTS_1006:0 "Longyan"
+ VICTORY_POINTS_10042:0 "Nanping"
+ VICTORY_POINTS_1055:0 "Wenzhou"
+ VICTORY_POINTS_11920:0 "Jinhua"
+ VICTORY_POINTS_1153:0 "Jingdezhen"
+ VICTORY_POINTS_1099:0 "Wuhu"
+ VICTORY_POINTS_1125:0 "Huangshan"
+ VICTORY_POINTS_11937:0 "Tongling"
+ VICTORY_POINTS_7094:0 "Huainan"
  VICTORY_POINTS_7101:0 "Changde"
  VICTORY_POINTS_7137:0 "Nanning"
  VICTORY_POINTS_4023:0 "Beihai"
@@ -733,7 +753,8 @@
  VICTORY_POINTS_4268:0 "Noumea"
  VICTORY_POINTS_4329:0 "Port Moresby"
  VICTORY_POINTS_2489:0 "Truk"
- VICTORY_POINTS_4357:0 "North Palau"
+ VICTORY_POINTS_12103:0 "Koror"
+
  VICTORY_POINTS_7251:0 "Rabaul"
  VICTORY_POINTS_7302:0 "Suva"
  VICTORY_POINTS_12140:0 "Guam"
