Long Live the Association

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -771,9 +771,17 @@
  VICTORY_POINTS_4329:0 "Port Moresby"
  VICTORY_POINTS_2489:0 "Truk"
  VICTORY_POINTS_12103:0 "Koror"
-
+ VICTORY_POINTS_11980:0 "Dezhou"
+ VICTORY_POINTS_9969:0 "Cangzhou"
+ VICTORY_POINTS_1575:0 "Yuncheng"
+ VICTORY_POINTS_1139:0 "Xinxiang"
+ VICTORY_POINTS_7158:0 "Datong"
+ VICTORY_POINTS_3427:0 "Ordos"
+ VICTORY_POINTS_4634:0 "Linfen"
+ VICTORY_POINTS_4190:0 "Shijiazhuang"
  VICTORY_POINTS_7251:0 "Rabaul"
  VICTORY_POINTS_7302:0 "Suva"
+ VICTORY_POINTS_7160:0 "Liaocheng"
  VICTORY_POINTS_12140:0 "Guam"
  VICTORY_POINTS_12237:0 "Lae"
  VICTORY_POINTS_7378:0 "Kokoda"
@@ -800,8 +808,15 @@
  VICTORY_POINTS_5072:0 "Zhaotong"
  VICTORY_POINTS_10413:0 "Xishuangbanna"
  VICTORY_POINTS_4501:0 "Mengzi"
- VICTORY_POINTS_8049:0 "Yan'an"
- VICTORY_POINTS_1519:0 "Taiyuan"
+ VICTORY_POINTS_12356:0 "Yan'an"
+ VICTORY_POINTS_3900:0 "Qinhuangdao"
+ VICTORY_POINTS_12043:0 "Tangshan"
+ VICTORY_POINTS_12156:0 "Tongchuan"
+ VICTORY_POINTS_7314:0 "Yulin"
+ VICTORY_POINTS_10421:0 "Changzhi"
+ VICTORY_POINTS_12078:0 "Yangquan"
+ VICTORY_POINTS_4174:0 "Taiyuan"
+ VICTORY_POINTS_12026:0 "Baoding"
  VICTORY_POINTS_377:0 "Cardiff"
  VICTORY_POINTS_495:0 "Dortmund"
  VICTORY_POINTS_540:0 "Plymouth"
