stuff moved from flavour test

--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -225,22 +225,22 @@
  SPR_cn_ADJ:0 "Spanish"
  SPR_an_ADJ:0 "Spanish"
 
- HOL_ni:0 "Republic Of the Netherlands"
- HOL_ni_DEF:0 "Republic Of the Netherlands"
- HOL_ds:0 "Republic Of the Netherlands"
- HOL_ds_DEF:0 "Republic Of the Netherlands"
- HOL_rc:0 "Republic Of the Netherlands"
- HOL_rc_DEF:0 "Republic Of the Netherlands"
- HOL_an:0 "Republic Of the Netherlands"
- HOL_an_DEF:0 "Republic Of the Netherlands"
- HOL_cn:0 "Republic Of the Netherlands"
- HOL_cn_DEF:0 "Republic Of the Netherlands"
- HOL_lb:0 "Republic Of the Netherlands"
- HOL_lb_DEF:0 "Republic Of the Netherlands"
- HOL_ss:0 "Republic Of the Netherlands"
- HOL_ss_DEF:0 "Republic Of the Netherlands"
- HOL_jc:0 "Union Republic Of the Netherlands"
- HOL_jc_DEF:0 "Union Of the Netherlands"
+ HOL_ni:0 "Republic of the Netherlands"
+ HOL_ni_DEF:0 "the Republic of the Netherlands"
+ HOL_ds:0 "Republic of the Netherlands"
+ HOL_ds_DEF:0 "the Republic of the Netherlands"
+ HOL_rc:0 "Republic of the Netherlands"
+ HOL_rc_DEF:0 "the Republic of the Netherlands"
+ HOL_an:0 "Republic of the Netherlands"
+ HOL_an_DEF:0 "the Republic of the Netherlands"
+ HOL_cn:0 "Republic of the Netherlands"
+ HOL_cn_DEF:0 "the Republic of the Netherlands"
+ HOL_lb:0 "Republic of the Netherlands"
+ HOL_lb_DEF:0 "the Republic of the Netherlands"
+ HOL_ss:0 "Republic of the Netherlands"
+ HOL_ss_DEF:0 "the Republic of the Netherlands"
+ HOL_jc:0 "Union Republic of the Netherlands"
+ HOL_jc_DEF:0 "the Union of the Netherlands"
  HOL_ni_ADJ:0 "Dutch"
  HOL_rc_ADJ:0 "Dutch"
  HOL_lb_ADJ:0 "Dutch"
@@ -3871,15 +3871,15 @@ SAN_an_ADJ:0 "Indian"
  HAN_an_DEF:0 "Alemannia"
  HAN_cn:0 "Alemannia"
  HAN_cn_DEF:0 "Alemannia"
- HAN_lb:0 "Alemannia"
- HAN_lb_DEF:0 "Alemannia"
+ HAN_lb:0 "Kingdom of Hannover"
+ HAN_lb_DEF:0 "Kingdom of Hannover"
  HAN_ss:0 "Alemannia"
  HAN_ss_DEF:0 "Alemannia"
  HAN_jc:0 "Alemannia"
  HAN_jc_DEF:0 "Alemannia"
  HAN_ni_ADJ:0 "French-Hannoverian"
  HAN_rc_ADJ:0 "French-Hannoverian"
- HAN_lb_ADJ:0 "French-Hannoverian"
+ HAN_lb_ADJ:0 "Hannoverian"
  HAN_ss_ADJ:0 "French-Hannoverian"
  HAN_jc_ADJ:0 "French-Hannoverian"
  HAN_ds_ADJ:0 "French-Hannoverian"
@@ -9051,44 +9051,60 @@ CYR_DEF:0 "the Kingdom of Cyprus"
 CYR_ADJ:0 "Cypriot"
 
 NGR:0 "Republic of Kaouar"
-NGR_DEF:0 "Republic of Kaouar"
+NGR_DEF:0 "the Republic of Kaouar"
 NGR_ADJ:0 "Kaouari"
 
 DJI:0 "Sagallo State"
-DJI_DEF:0 "Sagallo State"
+DJI_DEF:0 "the Sagallo State"
 DJI_ADJ:0 "Sagallo"
 
 SUR:0 "Republic of Suriname"
-SUR_DEF:0 "Republic of Suriname"
+SUR_DEF:0 "the Republic of Suriname"
 SUR_ADJ:0 "Surinamese"
 
 DOM:0 "Republic of Dominica"
-DOM_DEF:0 "Republic of Dominica"
+DOM_DEF:0 "the Republic of Dominica"
 DOM_ADJ:0 "Dominican"
 
 COS:0 "Republic of Costa Rica"
-COS_DEF:0 "Republic of Costa Rica"
+COS_DEF:0 "the Republic of Costa Rica"
 COS_ADJ:0 "Costa Rican"
 
 BLZ:0 "Republic of Belize"
-BLZ_DEF:0 "Republic of Belize"
+BLZ_DEF:0 "the Republic of Belize"
 BLZ_ADJ:0 "Belizian"
 
 MAC:0 "Republic of Macedonia"
-MAC_DEF:0 "Republic of Macedonia"
+MAC_DEF:0 "the Republic of Macedonia"
 MAC_ADJ:0 "Macedonian"
 
 ERI:0 "Republic of Eritrea"
-ERI_DEF:0 "Republic of Eritrea"
+ERI_DEF:0 "the Republic of Eritrea"
 ERI_ADJ:0 "Ertitrean"
 
 TAN:0 "Tuvan Republic"
-TAN_DEF:0 "Tuvan Republic"
+TAN_DEF:0 "the Tuvan Republic"
 TAN_ADJ:0 "Tuvan"
 
-MLD:0 "Republic Of The Maldives"
-MLD_DEF:0 "Republic Of The Maldives"
+MLD:0 "Republic of the Maldives"
+MLD_DEF:0 "the Republic of the Maldives"
 MLD_ADJ:0 "Maldivian"
+
+ELT:0 "Alsace State"
+ELT_DEF:0 "the Alsace State"
+ELT_ADJ:0 "Alsacian"
+
+VEN:0 "Republic of Venezuela"
+VEN_DEF:0 "the Republic of Venezuela"
+VEN_ADJ:0 "Venezuelan"
+
+COL:0 "Republic of Colombia"
+COL_DEF:0 "the Republic of Colombia"
+COL_ADJ:0 "Colombian"
+
+FRK:0 "Kingdom of Hesse"
+FRK_DEF:0 "the Kingdom of Hessen"
+FRK_ADJ:0 "Rhenish"
 
 MLT_ni:0 "Maltese Protectorate"
 MLT_ni_DEF:0 "The Crown Colony of Malta"
