--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1330,3 +1330,5 @@
  VICTORY_POINTS_4740:0 "Numunuu"
  VICTORY_POINTS_10798:0 "Naanapusookuni"
  VICTORY_POINTS_12624:0 "Tu Parawutu"
+ VICTORY_POINTS_11562:0 "Maastricht"
+ VICTORY_POINTS_9403:0 "Enschede"
