China Map Finalized

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -595,7 +595,7 @@
  STATE_594:0 "Nanning"
  STATE_595:0 "Fujian"
  STATE_596:0 "Zhejiang"
- STATE_597:0 "Shandong"
+ STATE_597:0 "Jinan"
  STATE_598:0 "Jiangsu"
  STATE_599:0 "Guangxi"
  STATE_600:0 "Jiangxi"
@@ -752,7 +752,7 @@
  STATE_751:0 "Liangshan"
  STATE_752:0 "Chamdo"
  STATE_753:0 "Gannan"
- STATE_754:0 "Golog"
+ STATE_754:0 "Xining"
  STATE_755:0 "Haixi"
  STATE_756:0 "Jiuquan"
  STATE_757:0 "Shigatse"
@@ -945,3 +945,5 @@
  STATE_957:0 "Mississippi"
  STATE_958:0 "Cumberland"
  STATE_959:0 "Nanjing"
+ STATE_960:0 "North Hebei"
+ STATE_961:0 "Shandong"
