Prussia Anarcho Stuff

--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -329,7 +329,11 @@
   PRS_Restore_Political_Confidence_tt:0 "Have failed §Y5§! or more Operations"
   PRS_Restore_Political_Confidence:0 "Restore Political Confidence"
 
-
+  PB_PRS_EM_GUI_icon_tt:0 "£trigger_no Insufficient Political Power\n\n\n§HPromote Militarism§!\nAdds the following hidden state modifier for £pol_power §H75§!:\n\n§YPrussian Militarism§!\nLocal Manpower: §G+10%§!\nLocal construction speed: §G+10%§!\n\nAlso adds §G+1§! off-map military factory."
+  PB_PRS_EM_GUI_button_tt:0 "£trigger_yes Insufficient Political Power\n\n\n§HPromote Militarism§!\nAdds the following hidden state modifier for £pol_power §H75§!:\n\n§YPrussian Militarism§!\nLocal Manpower: §G+10%§!\nLocal construction speed: §G+10%§!\n\nAlso adds §G+1§! off-map military factory."
+  PB_PRS_EM_GUI_button_selected_tt:0 "This state currently enjoys the following benefits:\n\n§YPrussian Militarism§!\nLocal Manpower: §G+10%§!\nLocal construction speed: §G+10%§!\n\n§G+1§! off-map military factory."
+  PRS_Resist_EM:0 "Prussian Militarism"
+  PB_PRS_Declare_The_Kingdom_tt:0 "\nUnlocks: §YEntice Militarism§! state core action\n\n\n\n\n\n\n\n\n£PRS_EM_icon\n\n\n\n\n\n\n\n\n\n\n§gAll core states will be able to entice militarism, this button can be located in the state window."
 
   ##########################
   # DYNAMIC MODIFIERS
