Finished Russian Lake

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -287,6 +287,10 @@
  VICTORY_POINTS_12100:0 "Nador"
  VICTORY_POINTS_989:0 "Oujda"
  VICTORY_POINTS_957:0 "Vladivostok"
+ VICTORY_POINTS_6989:0 "Ussuriysk"
+ VICTORY_POINTS_6961:0 "Nachodka"
+ VICTORY_POINTS_664:0 "Dalneretschensk"
+ VICTORY_POINTS_9604:0 "Wanino"
  VICTORY_POINTS_291:0 "Ufa"
  VICTORY_POINTS_7081:0 "Annaba"
  VICTORY_POINTS_10059:0 "Batna"
